--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,8 +1,10 @@
 pluginManagement {
     repositories {
         google()
-        mavenCentral()
         gradlePluginPortal()
+        mavenCentral()
+        mavenLocal()
+        maven { url 'https://jitpack.io' }
     }
 }
 dependencyResolutionManagement {
@@ -10,6 +12,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "BioAMS"
